# gc

./: .env.example  .gitignore  CHANGELOG.md  README.md  install-lxc.sh  pyproject.toml
.github/workflows/: ci.yml
cron/: gc-cron.sh
docs/superpowers/specs/: 2026-04-12-gc-auto-otp-design.md  2026-04-12-gc-calendar-sync-design.md
gc_cli/: __init__.py  cli.py  client.py  session.py  sync.py
systemd/: gc-token-refresh.service  gc-token-refresh.timer
tests/: conftest.py  test_cli.py  test_client.py  test_session.py  test_sync.py
tests/e2e/: .env.example  test_sync_e2e.sh
