[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gc"
version = "0.1.17"
description = "GameChanger team schedule & clips CLI scraper"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
gc = "gc_cli.cli:main"

[tool.setuptools.packages.find]
include = ["gc_cli*"]
